# hubuum-python

./: .gitignore  404.html  CNAME  Changelog.md  Dockerfile  README.md  entrypoint.sh  hubuum-api-v1.json  index.html  manage.py  mkdocs.yml  objects.inv  prepare_release.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  tox.ini
.github/: labeler.yml
.github/workflows/: deploy-documentation.yml  docker.yml  labeler.yml  lint.yml  publish-to-pypi.yml  tox.yml
about/: index.html
api/: index.html
authentication/: index.html
code-style/: index.html
configuration/: index.html
contributing/: index.html
docs/: about.md  api.md  authentication.md  code-style.md  configuration.md  contributing.md  examples.md  extensions.md  hubuum-api-v1.json  index.md  installation.md  logging.md  model.md  permissions.md  swagger.md  terminology.md  unit-tests.md  what_is_hubuum.md
examples/: index.html
extensions/: index.html
hubuum/: __init__.py  admin.py  apps.py  exceptions.py  filters.py  log.py  models.py  pagination.py  permissions.py  signals.py  tools.py  typing.py  validators.py
hubuum/api/: urls.py  views.py
hubuum/api/v1/: serializers.py  urls.py  views.py
hubuum/main/: 404.html  hubuum-api-v1.json  index.html  objects.inv
hubuum/main/about/: index.html
hubuum/main/api/: index.html
hubuum/main/code-style/: index.html
hubuum/main/configuration/: index.html
hubuum/main/contributing/: index.html
hubuum/main/examples/: index.html
hubuum/main/extensions/: index.html
hubuum/main/installation/: index.html
hubuum/main/logging/: index.html
hubuum/main/model/: index.html
hubuum/main/permissions/: index.html
hubuum/main/search/: search_index.json
hubuum/main/swagger/: index.html  swagger-02375a6c.html  swagger-05abc026.html  swagger-08f36e71.html  swagger-0b64bcd6.html  swagger-0f591cda.html  swagger-1286fb95.html  swagger-2aa6c5fb.html  swagger-2b545349.html  swagger-2f06d4cc.html  swagger-397dd90c.html  swagger-3cf07352.html  swagger-46ba0158.html  swagger-561c9dcb.html  swagger-5da8a912.html  swagger-5f937c67.html  swagger-6338a020.html  swagger-63fbc12a.html  swagger-66e7e8ca.html  swagger-72fe1fab.html  swagger-8f79096e.html  swagger-929bd7cc.html  swagger-a9daaadf.html  swagger-acf3a2ad.html  swagger-b0b23f69.html  swagger-bafee811.html  swagger-bf9dd723.html  swagger-c16c1a78.html  swagger-c6de830f.html  swagger-caabe10a.html  swagger-cbb55d65.html  swagger-ce66b7ad.html  swagger-d141f145.html  (+11 more)
hubuum/middleware/: __init__.py  context.py  logging.py  logging_http.py
hubuum/migrations/: 0001_initial.py
hubuum/models/: __init__.py  auth.py  base.py  core.py  dynamic.py  iam.py  permissions.py  resources.py
hubuum/tests/: base.py  test_00_internals.py  test_01_configuration_management.py  test_02_direct_user_and_groups.py  test_05_internal_models.py  test_10_direct_host_model.py  test_11_direct_hosttype_model.py  test_12_direct_room_model.py  test_13_direct_jack_model.py  test_14_direct_vendor_model.py  test_15_direct_purchaseorder_model.py  test_16_direct_purchasedocument_model.py  test_17_direct_person_model.py  test_18_direct_attachment.py  test_20_direct_permissions.py  test_30_direct_dynamic.py
hubuumsite/: asgi.py  settings.py  urls.py  wsgi.py
hubuumsite/config/: __init__.py  abstract.py  base.py  database.py  logging.py  request.py  sentry.py
installation/: index.html
logging/: index.html
model/: index.html
permissions/: index.html
search/: search_index.json
swagger/: index.html  swagger-01fc94c8.html  swagger-0251fb58.html  swagger-02c2c5bf.html  swagger-0364e4cb.html  swagger-074379e3.html  swagger-078a7d39.html  swagger-089fbb5a.html  swagger-0bd80fcb.html  swagger-0ca821a4.html  swagger-0db3e31f.html  swagger-13d5eaa2.html  swagger-13dd99db.html  swagger-15883dfa.html  swagger-159521d5.html  swagger-161453b5.html  swagger-17fb6361.html  swagger-1ae6726d.html  swagger-20ba3f3c.html  swagger-22840bfb.html  swagger-238db06d.html  swagger-26e46eb9.html  swagger-29589a94.html  swagger-2c527471.html  swagger-32646d17.html  swagger-35f12217.html  swagger-36a18174.html  swagger-36b9f733.html  swagger-37573a59.html  swagger-39418ff1.html  swagger-3c45e8ec.html  swagger-3d77921b.html  swagger-4575819a.html  swagger-4846a653.html  swagger-48f70966.html  swagger-4c1c279a.html  swagger-4c6e2771.html  swagger-4f0a0e7f.html  swagger-5298d809.html  swagger-56dccc01.html  (+69 more)
terminology/: index.html
unit-tests/: index.html
what_is_hubuum/: index.html
(+46 files in other folders)
